--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -1,6 +1,25 @@
 //$theme-colors:( "primary": #006165, "secondary": #7da4a7);
 //$font-family: 'Archivo', sans-serif;
-$body-bg: #e6ecec;
-
 @import "source/scss/variables";
 @import "node_modules/bootstrap/scss/bootstrap";
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 40px;
+    /* Margin bottom by footer height */
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    /* Set the fixed height of the footer here */
+    line-height: 40px;
+    /* Vertically center the text there */
+    background-color: $light;
+}
