--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -2,7 +2,6 @@
 //$font-family: 'Archivo', sans-serif;
 @import "source/scss/variables";
 @import "node_modules/bootstrap/scss/bootstrap";
-
 html {
     position: relative;
     min-height: 100%;
@@ -11,6 +10,50 @@ html {
 body {
     margin-bottom: 40px;
     /* Margin bottom by footer height */
+}
+
+/* Icons */
+
+/* Rules for sizing the icon. */
+
+.material-icons.md-6 {
+    font-size: 6px;
+}
+
+.material-icons.md-18 {
+    font-size: 18px;
+}
+
+.material-icons.md-24 {
+    font-size: 24px;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-48 {
+    font-size: 48px;
+}
+
+/* Rules for using icons as black on a light background. */
+
+.material-icons.md-dark {
+    color: rgba(0, 0, 0, 0.54);
+}
+
+.material-icons.md-dark.md-inactive {
+    color: rgba(0, 0, 0, 0.26);
+}
+
+/* Rules for using icons as white on a dark background. */
+
+.material-icons.md-light {
+    color: rgba(255, 255, 255, 1);
+}
+
+.material-icons.md-light.md-inactive {
+    color: rgba(255, 255, 255, 0.3);
 }
 
 .footer {
