theme colour changed to liliac

--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -23,16 +23,16 @@ $yellow: #F39C12 !default;
 $green: #00bc8c !default;
 $teal: #20c997 !default;
 $cyan: #3498DB !default;
-$primary:#2d7f83 !default;
-$secondary: #fed580 !default;
-$success: #7da4a7 !default;
+$primary:#834e75 !default;
+$secondary: #4E979A !default;
+$success: #a8859e !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
-$light: #bfd0d1 !default;
-$dark: #006165 !default;
+$light: #d2c0cd !default;
+$dark: #612158 !default;
 // Body
-$body-bg: #e6ecec !default;
+$body-bg: #ede5ea !default;
 //$body-color: !default;
 // Links
 $link-color: $success !default;
