--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -6290,8 +6290,69 @@ body {
   margin-bottom: 40px;
   /* Margin bottom by footer height */ }
 
-/* Icons */
-/* Rules for sizing the icon. */
+.nav-link.active {
+  background-color: #4E979A; }
+
+/* Making the card deck responsive */
+@media (min-width: 0) {
+  .card-deck .card {
+    flex: 0 0 calc(100% - 30px); } }
+
+@media (min-width: 576px) {
+  .card-deck .card {
+    flex: 0 0 calc(100% - 30px); } }
+
+@media (min-width: 768px) {
+  .card-deck .card {
+    flex: 0 0 calc(50% - 30px); } }
+
+@media (min-width: 992px) {
+  .card-deck .card {
+    flex: 0 0 calc(50% - 30px); } }
+
+@media (min-width: 1200px) {
+  .card-deck .card {
+    flex: 0 0 calc(50% - 30px); } }
+
+/* Circular Buttons */
+.btn-circle {
+  width: 49px;
+  height: 49px;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 20px;
+  line-height: 2.00;
+  border-radius: 30px; }
+
+.btn-circle-micro {
+  width: 19px;
+  height: 19px;
+  text-align: center;
+  padding: 1px 0;
+  font-size: 13px;
+  line-height: 0.1;
+  border-radius: 30px; }
+
+.btn-circle-sm {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  padding: 2px 0;
+  font-size: 20px;
+  line-height: 1.65;
+  border-radius: 30px; }
+
+.btn-circle-lg {
+  width: 79px;
+  height: 79px;
+  text-align: center;
+  padding: 13px 0;
+  font-size: 30px;
+  line-height: 2.00;
+  border-radius: 70px; }
+
+/* Icons??????????
+ Rules for sizing the icon. */
 .material-icons.md-6 {
   font-size: 6px; }
 
