--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -12,9 +12,64 @@ body {
     /* Margin bottom by footer height */
 }
 
-/* Icons */
 
-/* Rules for sizing the icon. */
+
+/* Making the card deck responsive */
+$grid-breakpoints: ( xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px) !default;
+$grid-gutter-width: 30px !default;
+// number of cards per line for each breakpoint
+$cards-per-line: ( xs: 1, sm: 1, md: 2, lg: 2, xl: 2, );
+@each $name,
+$breakpoint in $grid-breakpoints {
+    @media (min-width: $breakpoint) {
+        .card-deck .card {
+            flex: 0 0 calc(#{100/map-get($cards-per-line, $name)}% - #{$grid-gutter-width});
+        }
+    }
+}
+
+/* Circular Buttons */
+.btn-circle {
+    width: 49px;
+    height: 49px;
+    text-align: center;
+    padding: 5px 0;
+    font-size: 20px;
+    line-height: 2.00;
+    border-radius: 30px;
+}
+.btn-circle-micro {
+    width: 19px;
+    height: 19px;
+    text-align: center;
+    padding: 1px 0;
+    font-size: 13px;
+    line-height: 0.1;
+    border-radius: 30px;
+}
+
+.btn-circle-sm {
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    padding: 2px 0;
+    font-size: 20px;
+    line-height: 1.65;
+    border-radius: 30px;
+}
+
+.btn-circle-lg {
+    width: 79px;
+    height: 79px;
+    text-align: center;
+    padding: 13px 0;
+    font-size: 30px;
+    line-height: 2.00;
+    border-radius: 70px;
+}
+
+/* Icons??????????
+ Rules for sizing the icon. */
 
 .material-icons.md-6 {
     font-size: 6px;
